# aegis-fs

./: .clippy.toml  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  db.rs  erasure.rs  journal.rs  lib.rs  model.rs  pipeline.rs  store.rs  util.rs  vault.rs
crates/core/src/storage/: httpbucket.rs  mod.rs
