[workspace]
members = [
    "crates/core",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
aead = "0.5.2"
anyhow = "1.0.86"
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["alloc"] }
assert_fs = "1.1.3"
base64 = "0.22.1"
blake3 = "1.5.5"
clap = { version = "4.5.21", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0.1"
hex = "0.4.3"
hkdf = "0.12.4"
password-hash = "0.5.0"
proptest = "1.5.0"
rand = { version = "0.8.5", features = ["std"] }
reed-solomon-erasure = { version = "6.0.0", default-features = false, features = ["std"] }
rpassword = "7.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "sqlite", "chrono"] }
tempfile = "3.12.0"
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
zeroize = "1.8.1"
zstd = "0.13.1"
assert_cmd = "2.0.14"
